# cybersentinel-windows-agent

./: .gitignore  BUILD.md  CLASSIFICATION_ALGORITHM.md  CMakeLists.txt  INSTALLATION.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  agent.py  agent_config.json  build_agent.bat  install-cpp.ps1  install.ps1  network_monitor.py  requirements.txt
.github/workflows/: build.yml
include/: agent.h  classifier.h  clipboard_monitor.h  config.h  file_monitor.h  http_client.h  logger.h  usb_monitor.h
src/: agent.cpp  classifier.cpp  clipboard_monitor.cpp  config.cpp  file_monitor.cpp  http_client.cpp  logger.cpp  main.cpp  usb_monitor.cpp
